--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,17 @@
   height: 100vh;
 }
 
+.container a {
+  color: #0070f3;
+  text-decoration: none;
+}
+
+.container a:hover,
+.container a:focus,
+.container a:active {
+  text-decoration: underline;
+}
+
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -22,100 +33,43 @@
   height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.footer > * {
+  margin: 1rem;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
   font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
+  margin: 0 0 0.5rem 0;
 }
 
 .description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+  margin: 0 0 0.5rem 0;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.images {
   display: flex;
+  flex-flow: row wrap;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  margin: 2rem;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+.images span {
+  margin: 2vmin;
+  font-size: 5vmin;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.images img, .images canvas {
+  width: 30vmin;
+  height: 30vmin;
+  padding: 0.5rem !important;
+  border-radius: 50%;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
+.description {
   font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+  line-height: 2rem;
 }
