fix: remove downscale suffix (see: nextauthjs/next-auth#1995)

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -35,6 +35,10 @@
   text-decoration: none;
 }
 
+.container button:disabled {
+  background-color: #7fd1fc;
+}
+
 .main {
   padding: 5rem 0;
   flex: 1;
